# Triplexes

./: IDEAS  NOTES  README.md  configure.sh
algorithm_test/: Makefile  chr1_serial_l19_q2_c1_e10.tfo.1line.data  main.cpp  myers-main.cpp  qgram  run_tests.sh  scratch  suffixarrays.cpp  tfo.fa  tts.fa
algorithm_test/bruteVSqgram/: .doit.swp  b_l19_c1_e5.summary  q_l19_c1_e5.summary
algorithm_test/myers/: .Makefile.swp  .edlib.cpp.swp  aligner.cpp  edlib.cpp  test.cpp
data/CDP_cDC/: TCONS_00001459.fa  TCONS_00003167.fa  TCONS_00011599.fa  TCONS_00011600.fa  TCONS_00011601.fa  TCONS_00011642.fa  TCONS_00015541.fa  TCONS_00015542.fa  TCONS_00017255.fa  TCONS_00017257.fa  TCONS_00019833.fa  TCONS_00019839.fa  TCONS_00020546.fa  TCONS_00021343.fa  TCONS_00021426.fa  TCONS_00021427.fa  TCONS_00029122.fa  TCONS_00030599.fa  TCONS_00039318.fa  TCONS_00039360.fa  TCONS_00039405.fa  TCONS_00039408.fa  TCONS_00039410.fa  TCONS_00039411.fa  TCONS_00039413.fa  TCONS_00039416.fa  TCONS_00039418.fa  TCONS_00039419.fa  TCONS_00039422.fa  TCONS_00047191.fa  TCONS_00049112.fa  TCONS_00049122.fa  TCONS_00051585.fa  TCONS_00051592.fa  TCONS_00052443.fa  TCONS_00053188.fa  TCONS_00053273.fa  TCONS_00053904.fa  TCONS_00054058.fa  TCONS_00054613.fa  (+68 more)
data/classes/: hg38_pseudogene_exons.bed  hg38_sncRNA_exons.bed
data/dna/: NC_018518.1-bordetella.fasta  de_genes_promoters_CDP_cDC_DN.fa  de_genes_promoters_CDP_cDC_UP.fa  qgram1_ds.fasta  qgram2ds.fasta
data/rna/: CDP_merged.fa  CDP_truncated.fa  fendrr.bed  fendrr.fasta  fendrr.oneline.fasta  hotair.fasta.oneline  hotair_chripseq.fa  qgram1.fasta  qgram2ss.fasta
data/sequences/: Fendrr.fa  TCONS_00090076_MEG3.fa  dlncGATA6.fa  dlncT.fa  hotair.fasta
data/tfo/: chr1-2_serial_l19_q2_c2_e10.tfo.data  chr1_serial_l19_q2_c1_e5.tfo.data  chr1_serial_l25_q1_c3_e15.tfo.data
output/: tfo_patterns  tmp-tfo  triplex-pairs.out  triplex-pairs.out.summary  triplex-pairs1.out  triplex-pairs1.out.summary  triplex_pairs.debug  triplex_pairs_inv.debug
output/mm9/: plot.py  (+5 more)
python_bindings/: triplexator.py
results/: README
scripts/: README  compare_brute_local_palindrom.py  data_analysis.py  master_run.py  unit_tests.py  utils.py
triplexator/: CMakeLists.txt
triplexator/src/: CMakeLists.txt  config.h  config.h.in  edlib.cpp  find_index_qgrams.h  gardener.h  interval_tree.h  local_container.h  myers.h  simpleintervaltree.h  triplex.h  triplex_pattern.h  triplexator.cpp
(+497 files in other folders)
